simplify sidebar to flat recording list
click a recording folder to play it directly instead of navigating
into it. remove breadcrumb navigation, file listing, and formatSize.
active recording is highlighted in the sidebar.

--- a/static/index.html
+++ b/static/index.html
@@ -18,9 +18,8 @@
           <span class="logo-text">OAK-D<span class="logo-dim">/viewer</span></span>
         </div>
       </div>
-      <nav id="breadcrumb" class="breadcrumb"></nav>
       <div id="file-tree" class="file-tree">
-        <div class="tree-empty">Configure S3 bucket to browse recordings</div>
+        <div class="tree-loading">Loading</div>
       </div>
     </aside>
 
